Add Platform.sh config and some pipeline actions.

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -72,9 +72,9 @@ hooks:
 relationships:
   database: "db:mysql"
   redis: "redis:redis"
-  solr:
-    service: solr
-    endpoint: main
+  # solr:
+  #   service: solr
+  #   endpoint: main
 crons:
   # Run Drupal's cron tasks every 1 minutes.
   drupal:
