Missed a few more

--- a/config/sync/gin.settings.yml
+++ b/config/sync/gin.settings.yml
@@ -14,12 +14,13 @@ third_party_settings:
     module_link: true
 preset_accent_color: blue
 preset_focus_color: gin
-enable_darkmode: '1'
-classic_toolbar: classic
+enable_darkmode: auto
+classic_toolbar: horizontal
 secondary_toolbar_frontend: true
 high_contrast_mode: false
 accent_color: ''
 focus_color: ''
 layout_density: small
 show_description_toggle: false
-show_user_theme_settings: false
+show_user_theme_settings: true
+sticky_action_buttons: false
