--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -31,7 +31,10 @@ module:
   editor_advanced_link: 0
   entity_clone: 0
   entity_overview: 0
+  entity_overview_search: 0
+  entity_overview_search_api: 0
   entity_overview_transform: 0
+  entity_reference_fallback: 0
   entity_reference_revisions: 0
   entity_usage: 0
   field: 0
@@ -51,6 +54,7 @@ module:
   language: 0
   layout_builder: 0
   layout_builder_at: 0
+  layout_builder_lock: 0
   layout_builder_modal: 0
   layout_builder_restrictions: 0
   layout_discovery: 0
@@ -84,6 +88,7 @@ module:
   role_delegation: 0
   scheduled_transitions: 0
   search_api: 0
+  search_api_autocomplete: 0
   search_api_db: 0
   search_api_exclude_entity: 0
   search_api_page: 0
