--- a/config/sync/entity_overview.overview.article.yml
+++ b/config/sync/entity_overview.overview.article.yml
@@ -1,22 +1,24 @@
 uuid: 53e8b9ea-b904-4d7e-a4ca-3e28544a8b0f
 langcode: en
 status: true
-dependencies:
-  config:
-    - node.type.article
-  module:
-    - node
+dependencies: {  }
 _core:
   default_config_hash: 0I8OcLoCv7DHWWVr9AoRhTG-0ZJbHVmdeTR94Tqto08
 id: article
 label: Article
-entity_bundles:
-  node:
-    - article
+entity_bundles: {  }
 fields:
+  text: search
   field_article_categories: checkboxes
   field_article_type: checkboxes
-engine_id: entity_query
-engine_settings: {  }
+engine_id: search_api
+engine_settings:
+  notice: ''
+  index: articles
+  title_field: title
+  owner_field: ''
+  fulltext_fields:
+    rendered_item: rendered_item
+    body: 0
 sort_field: field_list_date
-show_total: ''
+show_total: filtered
