Added hero layout

--- a/config/sync/config_ignore.settings.yml
+++ b/config/sync/config_ignore.settings.yml
@@ -1,3 +1,6 @@
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
-ignored_config_entities: {  }
+mode: simple
+ignored_config_entities:
+  - 'system.menu.*'
+  - system.site
