--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -79,6 +79,7 @@ module:
   premium_articles: 0
   premium_core: 0
   premium_headless: 0
+  premium_layout_builder_restrictions: 0
   premium_search: 0
   premium_theme_helper: 0
   premium_tools: 0
