--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "drupal/imageapi_optimize": "^4.0",
         "drupal/inline_block_title_automatic": "^2.0",
         "drupal/layout_builder_at": "^3.0",
+        "drupal/layout_builder_iframe_modal": "^1.3",
         "drupal/layout_builder_lock": "^2.0@RC",
         "drupal/layout_builder_modal": "^2.0",
         "drupal/layout_builder_restrictions": "^3.0",
@@ -93,7 +94,8 @@
     },
     "require-dev": {
         "drupal/devel": "^5.0",
-        "drupal/upgrade_status": "^4.0"
+        "drupal/upgrade_status": "^4.0",
+        "kint-php/kint": "^6.0"
     },
     "conflict": {
         "drupal/drupal": "*"
