--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -54,6 +54,7 @@ module:
   language: 0
   layout_builder: 0
   layout_builder_at: 0
+  layout_builder_iframe_modal: 0
   layout_builder_lock: 0
   layout_builder_modal: 0
   layout_builder_restrictions: 0
