--- a/config/sync/layout_builder_modal.settings.yml
+++ b/config/sync/layout_builder_modal.settings.yml
@@ -1,6 +1,6 @@
 _core:
   default_config_hash: HYXi4DJ4Kdg5KkUadQqHeDIbtJZYcVDpJl2ucalDPk0
-modal_width: 768
+modal_width: '768'
 modal_height: auto
 modal_autoresize: true
 theme_display: gin
