--- a/config/sync/views.view.articles.yml
+++ b/config/sync/views.view.articles.yml
@@ -126,6 +126,7 @@ display:
               responsive: ''
           default: field_list_date
           empty_table: true
+          class: ''
       row:
         type: fields
       fields:
@@ -429,8 +430,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             operator_limit_selection: false
             operator_list: {  }
           is_grouped: false
@@ -473,11 +472,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              editor: '0'
-              webmaster: '0'
-              monitor: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -524,8 +518,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -613,8 +605,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
             operator_limit_selection: false
             operator_list: {  }
