--- a/config/sync/views.view.glossary.yml
+++ b/config/sync/views.view.glossary.yml
@@ -297,6 +297,7 @@ display:
           order: asc
           summary: ''
           empty_table: false
+          class: ''
       row:
         type: fields
         options:
