--- a/config/sync/views.view.scheduled_transitions.yml
+++ b/config/sync/views.view.scheduled_transitions.yml
@@ -126,6 +126,7 @@ display:
               responsive: ''
           default: transition_on
           empty_table: false
+          class: ''
       row:
         type: fields
       fields:
