--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -24,11 +24,10 @@ dependencies:
     - user
 third_party_settings:
   layout_builder:
-    allow_custom: true
     enabled: true
+    allow_custom: true
   layout_builder_restrictions:
     allowed_block_categories:
-      - 'Chaos Tools'
       - 'Content fields'
       - 'Custom block types'
       - Devel
@@ -43,6 +42,30 @@ third_party_settings:
       - Webform
       - core
     entity_view_mode_restriction:
+      allowed_layouts:
+        - layout_onecol
+        - layout_twocol_section
+        - layout_threecol_section
+        - layout_article_section
+        - layout_hero_section
+      denylisted_blocks:
+        'Custom block types':
+          - basic
+        'Inline blocks':
+          - 'inline_block:basic'
+      allowlisted_blocks: {  }
+      restricted_categories:
+        - 'Content fields'
+        - Devel
+        - Forms
+        - Help
+        - 'Lists (Views)'
+        - Menus
+        - Premium
+        - System
+        - User
+        - Webform
+        - core
       whitelisted_blocks:
         'Chaos Tools': {  }
         'Content fields': {  }
@@ -60,12 +83,62 @@ third_party_settings:
           - basic
         'Inline blocks':
           - 'inline_block:basic'
+    entity_view_mode_restriction_by_region:
       allowed_layouts:
         - layout_onecol
         - layout_twocol_section
         - layout_threecol_section
-      restricted_categories:
-        - Devel
+        - layout_article_section
+        - layout_hero_section
+      allowlisted_blocks:
+        layout_article_section:
+          content:
+            'Custom block types':
+              - image
+              - quote
+              - rte
+              - video
+            'Inline blocks':
+              - 'inline_block:image'
+              - 'inline_block:quote'
+              - 'inline_block:rte'
+              - 'inline_block:video'
+          sidebar:
+            'Custom block types':
+              - button
+            'Inline blocks':
+              - 'inline_block:button'
+        layout_hero_section:
+          all_regions:
+            'Custom block types':
+              - hero
+            'Inline blocks':
+              - 'inline_block:hero'
+      denylisted_blocks:
+        layout_threecol_section:
+          all_regions:
+            'Custom block types':
+              - appetizer
+              - hero
+            'Inline blocks':
+              - 'inline_block:appetizer'
+              - 'inline_block:hero'
+        layout_twocol_section:
+          all_regions:
+            'Custom block types':
+              - appetizer
+              - hero
+            'Inline blocks':
+              - 'inline_block:appetizer'
+              - 'inline_block:hero'
+    unique_section_restriction:
+      unique_layouts:
+        - layout_article_section
+        - layout_hero_section
+    singular_block_region_restriction:
+      singular_regions:
+        layout_hero_section:
+          - content
 _core:
   default_config_hash: 7OjcNSYQFZAAnCZrnyJg7utryjfmQoO33tkSTWehRNI
 id: node.article.full
@@ -74,29 +147,29 @@ bundle: article
 mode: full
 content:
   field_header:
-    weight: 1
+    type: entity_reference_revisions_entity_view
     label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
+    weight: 1
     region: content
   field_list_date:
-    weight: 2
+    type: datetime_time_ago
     label: hidden
     settings:
       future_format: '@interval hence'
       past_format: '@interval ago'
       granularity: 2
     third_party_settings: {  }
-    type: datetime_time_ago
+    weight: 2
     region: content
   links:
-    weight: 0
-    region: content
     settings: {  }
     third_party_settings: {  }
+    weight: 0
+    region: content
 hidden:
   body: true
   field_article_categories: true
