--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -76,6 +76,7 @@ module:
   path: 0
   path_alias: 0
   premium_articles: 0
+  premium_articles_layout: 0
   premium_core: 0
   premium_headless: 0
   premium_layout_builder_restrictions: 0
