--- a/config/sync/views.view.files.yml
+++ b/config/sync/views.view.files.yml
@@ -143,6 +143,7 @@ display:
               responsive: priority-medium
           default: changed
           empty_table: true
+          class: ''
       row:
         type: fields
       fields:
@@ -595,8 +596,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             operator_limit_selection: false
             operator_list: {  }
           is_grouped: false
@@ -637,8 +636,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             operator_limit_selection: false
             operator_list: {  }
           is_grouped: false
@@ -679,8 +676,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
             operator_limit_selection: false
             operator_list: {  }
@@ -1105,6 +1100,7 @@ display:
               responsive: ''
           default: entity_label
           empty_table: true
+          class: ''
       row:
         type: fields
         options: {  }
