--- a/config/sync/views.view.media.yml
+++ b/config/sync/views.view.media.yml
@@ -135,6 +135,7 @@ display:
               responsive: ''
           default: changed
           empty_table: true
+          class: ''
       row:
         type: fields
       fields:
@@ -643,8 +644,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             operator_limit_selection: false
             operator_list: {  }
           is_grouped: false
@@ -685,8 +684,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
             operator_limit_selection: false
             operator_list: {  }
@@ -815,8 +812,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
             operator_limit_selection: false
             operator_list: {  }
@@ -860,11 +855,6 @@ display:
             multiple: true
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              editor: '0'
-              webmaster: '0'
-              monitor: '0'
             reduce: false
           is_grouped: false
           group_info:
