--- a/config/sync/views.view.moderated_content.yml
+++ b/config/sync/views.view.moderated_content.yml
@@ -2,7 +2,10 @@ uuid: a2a6e7eb-0492-45f6-bde7-78d905c81f8f
 langcode: en
 status: true
 dependencies:
+  config:
+    - workflows.workflow.editorial
   module:
+    - content_moderation
     - node
     - user
   enforced:
@@ -125,6 +128,7 @@ display:
               responsive: ''
           default: changed
           empty_table: true
+          class: ''
       row:
         type: fields
       fields:
@@ -567,8 +571,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             operator_limit_selection: false
             operator_list: {  }
           is_grouped: false
@@ -609,8 +611,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
             operator_limit_selection: false
             operator_list: {  }
@@ -654,8 +654,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: true
             operator_limit_selection: false
             operator_list: {  }
@@ -696,8 +694,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
             operator_limit_selection: false
             operator_list: {  }
