--- a/config/sync/views.view.redirect.yml
+++ b/config/sync/views.view.redirect.yml
@@ -131,6 +131,7 @@ display:
               responsive: ''
           default: created
           empty_table: false
+          class: ''
       row:
         type: fields
       fields:
@@ -356,8 +357,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             operator_limit_selection: false
             operator_list: {  }
           is_grouped: false
@@ -398,8 +397,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             operator_limit_selection: false
             operator_list: {  }
           is_grouped: false
@@ -443,8 +440,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             operator_limit_selection: false
             operator_list: {  }
           is_grouped: true
@@ -534,8 +529,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
             reduce: false
             operator_limit_selection: false
             operator_list: {  }
