--- a/config/sync/core.entity_view_display.node.page.full.yml
+++ b/config/sync/core.entity_view_display.node.page.full.yml
@@ -24,51 +24,7 @@ third_party_settings:
   layout_builder:
     enabled: true
     allow_custom: true
-    sections:
-      -
-        layout_id: layout_hero_section
-        layout_settings:
-          label: ''
-          context_mapping: {  }
-          column_widths: ''
-          color_theme: {  }
-          column_spacing_top: section--spacing-top-none
-          column_spacing_bottom: section--spacing-bottom-none
-          hide_breadcrumbs: false
-          column_width: section--width-full
-        components:
-          f0840a9e-c299-445d-95cb-1039cf7ea356:
-            uuid: f0840a9e-c299-445d-95cb-1039cf7ea356
-            region: content
-            configuration:
-              id: 'inline_block:hero'
-              label: 'Inline block'
-              label_display: ''
-              provider: layout_builder
-              context_mapping: {  }
-              view_mode: full
-              block_id: 1
-              block_revision_id: 1
-              block_serialized: null
-            weight: 0
-            additional: {  }
-          0cf2e503-e9da-4630-930d-2b7219b96e2d:
-            uuid: 0cf2e503-e9da-4630-930d-2b7219b96e2d
-            region: content
-            configuration:
-              id: premium_breadcrumb_block
-              label: Breadcrumbs
-              label_display: '0'
-              provider: premium_core
-              context_mapping: {  }
-            weight: 1
-            additional: {  }
-        third_party_settings:
-          layout_builder_lock:
-            lock:
-              6: 6
-              8: 8
-            regions: {  }
+    sections: {  }
   layout_builder_restrictions:
     allowed_block_categories:
       - 'Content fields'
