--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -7,37 +7,17 @@ dependencies:
     - field.field.node.article.field_article_categories
     - field.field.node.article.field_article_type
     - field.field.node.article.field_description
-    - field.field.node.article.field_header
-    - field.field.node.article.field_hide_breadcrumb
-    - field.field.node.article.field_hide_title
     - field.field.node.article.field_list_date
     - field.field.node.article.field_list_media
     - field.field.node.article.field_meta_tags
     - field.field.node.article.layout_builder__layout
     - node.type.article
+    - workflows.workflow.editorial
   module:
     - content_moderation
     - datetime
-    - field_group
     - media_library
-    - paragraphs_asymmetric_translation_widgets
     - path
-third_party_settings:
-  field_group:
-    group_page_header:
-      children:
-        - field_header
-      parent_name: ''
-      weight: 17
-      format_type: fieldset
-      region: content
-      format_settings:
-        show_empty_fields: false
-        id: ''
-        classes: ''
-        description: ''
-        required_fields: true
-      label: 'Page header'
 _core:
   default_config_hash: lCMS9iqusl8ppbYxINj_SRny0NNOhS2IAGuGG9i0r6c
 id: node.article.default
@@ -47,59 +27,47 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   field_article_categories:
-    weight: 4
+    type: entity_reference_autocomplete_tags
+    weight: 3
+    region: content
     settings:
       match_operator: CONTAINS
       match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_autocomplete_tags
-    region: content
   field_article_type:
+    type: options_select
     weight: 2
+    region: content
     settings: {  }
     third_party_settings: {  }
-    type: options_select
-    region: content
   field_description:
-    weight: 15
+    type: string_textarea
+    weight: 11
+    region: content
     settings:
       rows: 3
       placeholder: ''
     third_party_settings: {  }
-    type: string_textarea
-    region: content
-  field_header:
-    weight: 16
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-    third_party_settings: {  }
-    type: paragraphs_classic_asymmetric
-    region: content
   field_list_date:
-    weight: 14
+    type: datetime_default
+    weight: 10
+    region: content
     settings: {  }
     third_party_settings: {  }
-    type: datetime_default
-    region: content
   field_list_media:
-    weight: 16
+    type: media_library_widget
+    weight: 12
+    region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
-    type: media_library_widget
-    region: content
   langcode:
     type: language_select
     weight: 0
@@ -109,36 +77,20 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 18
-    settings: {  }
+    weight: 13
     region: content
+    settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 9
+  simple_sitemap:
+    weight: 7
     region: content
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 13
-    region: content
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 10
-    region: content
+    settings: {  }
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -149,28 +101,29 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 8
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 4
+    region: content
     settings:
       match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
-      match_limit: 10
-    region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 12
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   body: true
-  field_hide_breadcrumb: true
-  field_hide_title: true
   field_meta_tags: true
   layout_builder__layout: true
+  promote: true
+  status: true
+  sticky: true
