--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -8,9 +8,6 @@ dependencies:
     - field.field.node.article.field_article_categories
     - field.field.node.article.field_article_type
     - field.field.node.article.field_description
-    - field.field.node.article.field_header
-    - field.field.node.article.field_hide_breadcrumb
-    - field.field.node.article.field_hide_title
     - field.field.node.article.field_list_date
     - field.field.node.article.field_list_media
     - field.field.node.article.field_meta_tags
@@ -18,14 +15,36 @@ dependencies:
     - node.type.article
   module:
     - datetime
-    - entity_reference_revisions
     - layout_builder
     - layout_builder_restrictions
+    - layout_discovery
     - user
 third_party_settings:
   layout_builder:
     enabled: true
     allow_custom: true
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: ''
+          column_widths: null
+          color_theme: null
+          column_spacing_top: section--spacing-top-medium
+          column_spacing_bottom: section--spacing-bottom-medium
+          column_width: section--width-normal
+        components:
+          c14521e2-10fb-4f4c-b6e0-2da5ef429869:
+            uuid: c14521e2-10fb-4f4c-b6e0-2da5ef429869
+            region: content
+            configuration:
+              id: 'extra_field_block:node:article:content_moderation_control'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+            weight: 0
+            additional: {  }
+        third_party_settings: {  }
   layout_builder_restrictions:
     allowed_block_categories:
       - 'Content fields'
@@ -46,7 +65,7 @@ third_party_settings:
         - layout_onecol
         - layout_twocol_section
         - layout_threecol_section
-        - layout_article_section
+        - layout_article_sidebar_section
         - layout_hero_section
       denylisted_blocks:
         'Custom block types':
@@ -88,10 +107,10 @@ third_party_settings:
         - layout_onecol
         - layout_twocol_section
         - layout_threecol_section
-        - layout_article_section
+        - layout_article_sidebar_section
         - layout_hero_section
       allowlisted_blocks:
-        layout_article_section:
+        layout_article_sidebar_section:
           content:
             'Custom block types':
               - image
@@ -133,7 +152,7 @@ third_party_settings:
               - 'inline_block:hero'
     unique_section_restriction:
       unique_layouts:
-        - layout_article_section
+        - layout_article_sidebar_section
         - layout_hero_section
     singular_block_region_restriction:
       singular_regions:
@@ -146,14 +165,10 @@ targetEntityType: node
 bundle: article
 mode: full
 content:
-  field_header:
-    type: entity_reference_revisions_entity_view
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
+  content_moderation_control:
+    settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: -20
     region: content
   field_list_date:
     type: datetime_time_ago
@@ -175,8 +190,6 @@ hidden:
   field_article_categories: true
   field_article_type: true
   field_description: true
-  field_hide_breadcrumb: true
-  field_hide_title: true
   field_list_media: true
   field_meta_tags: true
   langcode: true
