Added header and footer regions to json output

--- a/config/sync/transform_api.regions.yml
+++ b/config/sync/transform_api.regions.yml
@@ -1,6 +1,8 @@
 _core:
   default_config_hash: fJg13zzILdXsi1A5HjnS4Iob1cNHs6Od6fuXbe2ijLM
 regions:
+  header: Header
   content: Content
+  footer: Footer
 default_region: content
 collapse_regions: false
