--- a/config/sync/transform_api.transform_block.content.yml
+++ b/config/sync/transform_api.transform_block.content.yml
@@ -6,7 +6,7 @@ _core:
   default_config_hash: kAg5j9eTxAyvuMxvOAK4Fve-7KxBZ6Sxh_QYuiPwNlM
 id: content
 region: content
-weight: null
+weight: '-2'
 provider: null
 plugin: system_main_block
 settings:
