--- a/webroot/sites/premium.drupal.dk/services.yml
+++ b/webroot/sites/premium.drupal.dk/services.yml
@@ -6,7 +6,7 @@ parameters:
     # Specify allowed request methods, specify ['*'] to allow all possible ones.
     allowedMethods: ['*']
     # Configure requests allowed from specific origins.
-    allowedOrigins: ['https://headless.premium.drupal.dk']
+    allowedOrigins: ['*']
     # Sets the Access-Control-Expose-Headers header.
     exposedHeaders: false
     # Sets the Access-Control-Max-Age header.
