Add messages block and owner field on article transforms

--- a/config/sync/transform_api.entity_transform_display.node.article.default.yml
+++ b/config/sync/transform_api.entity_transform_display.node.article.default.yml
@@ -19,23 +19,30 @@ targetEntityType: node
 bundle: article
 mode: default
 content:
+  field_article_categories:
+    type: entity_reference_links
+    weight: '6'
+    region: content
+    label: omit
+    settings: {  }
+    third_party_settings: {  }
   field_article_type:
     type: entity_reference_links
-    weight: '5'
+    weight: '3'
     region: content
     label: omit
     settings: {  }
     third_party_settings: {  }
   field_description:
     type: value
-    weight: '0'
+    weight: '1'
     region: content
     label: omit
     settings: {  }
     third_party_settings: {  }
   field_list_date:
     type: datetime_simple
-    weight: '6'
+    weight: '4'
     region: content
     label: omit
     settings:
@@ -44,7 +51,7 @@ content:
     third_party_settings: {  }
   field_list_media:
     type: entity_transform
-    weight: '9'
+    weight: '7'
     region: content
     label: omit
     settings:
@@ -52,7 +59,7 @@ content:
     third_party_settings: {  }
   field_meta_tags:
     type: metatag
-    weight: '7'
+    weight: '5'
     region: content
     label: omit
     settings: {  }
@@ -65,19 +72,18 @@ content:
     settings: {  }
     third_party_settings: {  }
   label:
-    weight: -100
+    weight: '0'
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   layout_builder__layout:
     type: layout_builder
-    weight: '4'
+    weight: '2'
     region: content
     label: omit
     settings: {  }
     third_party_settings: {  }
 hidden:
   body: true
-  field_article_categories: true
   langcode: true
   url: true
