--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -78,6 +78,7 @@ module:
   premium_articles: 0
   premium_articles_layout: 0
   premium_core: 0
+  premium_demo: 0
   premium_headless: 0
   premium_layout_builder_restrictions: 0
   premium_search: 0
