--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,6 @@
         "drupal/inline_block_title_automatic": "^2.0",
         "drupal/layout_builder_at": "^3.0",
         "drupal/layout_builder_iframe_modal": "^1.3",
-        "drupal/layout_builder_lock": "^2.0@RC",
         "drupal/layout_builder_modal": "^2.0",
         "drupal/layout_builder_restrictions": "^3.0",
         "drupal/linkit": "^7.0",
@@ -73,6 +72,7 @@
         "drupal/webform": "^6.3",
         "drupal/webp": "^1.0@RC",
         "drush/drush": "^13",
+        "novicell/announcement": "^2.0",
         "novicell/drupal-premium-theme": "^2.0",
         "novicell/dynamic_key_value": "^1.0",
         "novicell/image_style_generator": "^1.1",
