--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -3,6 +3,7 @@ _core:
 module:
   admin_toolbar: 0
   allowed_formats: 0
+  announcement: 0
   atoms: 0
   automated_cron: 0
   autosave_form: 0
@@ -49,6 +50,7 @@ module:
   history: 0
   hreflang: 0
   image: 0
+  image_style_generator: 0
   imageapi_optimize: 0
   inline_block_title_automatic: 0
   language: 0
@@ -76,6 +78,7 @@ module:
   path: 0
   path_alias: 0
   premium_articles: 0
+  premium_articles_breadcrumb: 0
   premium_articles_layout: 0
   premium_core: 0
   premium_demo: 0
@@ -115,6 +118,8 @@ module:
   webform_ui: 0
   webp: 0
   workflows: 0
+  workspaces: 0
+  workspaces_ui: 0
   pathauto: 1
   content_translation: 10
   views: 10
