--- a/config/sync/transform_api.entity_transform_display.node.article.teaser.yml
+++ b/config/sync/transform_api.entity_transform_display.node.article.teaser.yml
@@ -22,14 +22,14 @@ mode: teaser
 content:
   field_article_type:
     type: entity_reference_links
-    weight: '2'
+    weight: '3'
     region: content
     label: omit
     settings: {  }
     third_party_settings: {  }
   field_description:
     type: value
-    weight: '0'
+    weight: '1'
     region: content
     label: omit
     settings: {  }
@@ -45,21 +45,25 @@ content:
     third_party_settings: {  }
   field_list_media:
     type: entity_transform
-    weight: '1'
+    weight: '2'
     region: content
     label: omit
     settings:
       transform_mode: list_view
     third_party_settings: {  }
   label:
-    weight: -100
+    weight: '0'
+    region: content
     settings: {  }
     third_party_settings: {  }
+  url:
+    weight: '5'
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   body: true
   field_article_categories: true
   field_meta_tags: true
   langcode: true
   layout_builder__layout: true
-  url: true
