--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -22,7 +22,10 @@ module:
   content_moderation: 0
   contextual: 0
   crop: 0
+  date_recur: 0
+  date_recur_modular: 0
   datetime: 0
+  datetime_range: 0
   dblog: 0
   dynamic_color: 0
   dynamic_entity_reference: 0
@@ -44,6 +47,7 @@ module:
   file: 0
   filter: 0
   focal_point: 0
+  fullcalendar: 0
   gin_toolbar: 0
   health_check: 0
   help: 0
@@ -80,6 +84,7 @@ module:
   premium_articles: 0
   premium_articles_breadcrumb: 0
   premium_articles_layout: 0
+  premium_calendar: 0
   premium_core: 0
   premium_demo: 0
   premium_headless: 0
