--- a/config/sync/transform_api.entity_transform_display.block_content.hero.default.yml
+++ b/config/sync/transform_api.entity_transform_display.block_content.hero.default.yml
@@ -4,7 +4,14 @@ status: true
 dependencies:
   config:
     - block_content.type.hero
-    - field.field.block_content.hero.field_hero
+    - field.field.block_content.hero.field_background
+    - field.field.block_content.hero.field_color_theme
+    - field.field.block_content.hero.field_cta
+    - field.field.block_content.hero.field_overlay
+    - field.field.block_content.hero.field_text
+    - field.field.block_content.hero.field_text_position
+  module:
+    - styles
 _core:
   default_config_hash: JIDuNR4L6pBgvXPHc0lHsfhSWYFRmlamxQdeJ2yJymA
 id: block_content.hero.default
@@ -12,7 +19,7 @@ targetEntityType: block_content
 bundle: hero
 mode: default
 content:
-  field_hero:
+  field_background:
     type: entity_transform
     weight: '0'
     region: content
@@ -20,10 +27,41 @@ content:
     settings:
       transform_mode: default
     third_party_settings: {  }
-  label:
-    weight: -100
+  field_color_theme:
+    type: styles
+    weight: '1'
+    region: content
+    label: omit
     settings: {  }
     third_party_settings: {  }
+  field_cta:
+    type: styled_link
+    weight: '2'
     region: content
+    label: omit
+    settings: {  }
+    third_party_settings: {  }
+  field_overlay:
+    type: boolean
+    weight: '3'
+    region: content
+    label: omit
+    settings: {  }
+    third_party_settings: {  }
+  field_text:
+    type: text_format
+    weight: '4'
+    region: content
+    label: omit
+    settings: {  }
+    third_party_settings: {  }
+  field_text_position:
+    type: styles
+    weight: '5'
+    region: content
+    label: omit
+    settings: {  }
+    third_party_settings: {  }
 hidden:
+  label: true
   langcode: true
