--- a/config/sync/transform_api.entity_transform_display.block_content.hero.width_66.yml
+++ b/config/sync/transform_api.entity_transform_display.block_content.hero.width_66.yml
@@ -1,10 +1,15 @@
 uuid: 4a320e2e-d875-4c6b-9b61-c6fe1f7d02b4
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - block_content.type.hero
-    - field.field.block_content.hero.field_hero
+    - field.field.block_content.hero.field_background
+    - field.field.block_content.hero.field_color_theme
+    - field.field.block_content.hero.field_cta
+    - field.field.block_content.hero.field_overlay
+    - field.field.block_content.hero.field_text
+    - field.field.block_content.hero.field_text_position
     - transform_api.entity_transform_mode.block_content.width_66
 _core:
   default_config_hash: GQgiXPhFZmKsxmO41tiQnn0CVnVVnNpIovV85P9_ISc
@@ -13,18 +18,16 @@ targetEntityType: block_content
 bundle: hero
 mode: width_66
 content:
-  field_hero:
-    type: entity_transform
-    weight: '0'
-    region: content
-    label: omit
-    settings:
-      transform_mode: width_66
-    third_party_settings: {  }
   label:
     weight: -100
     settings: {  }
     third_party_settings: {  }
     region: content
 hidden:
+  field_background: true
+  field_color_theme: true
+  field_cta: true
+  field_overlay: true
+  field_text: true
+  field_text_position: true
   langcode: true
