--- a/config/sync/core.entity_form_display.block_content.hero.default.yml
+++ b/config/sync/core.entity_form_display.block_content.hero.default.yml
@@ -4,41 +4,71 @@ status: true
 dependencies:
   config:
     - block_content.type.hero
-    - field.field.block_content.hero.field_hero
+    - field.field.block_content.hero.field_background
+    - field.field.block_content.hero.field_color_theme
+    - field.field.block_content.hero.field_cta
+    - field.field.block_content.hero.field_overlay
+    - field.field.block_content.hero.field_text
+    - field.field.block_content.hero.field_text_position
   module:
-    - paragraphs
-_core:
-  default_config_hash: 5fD3474ZrDGb6pQauE8tdb5rxiAJP1VbpBoxWcl1nNc
+    - media_library
+    - styles
+    - text
 id: block_content.hero.default
 targetEntityType: block_content
 bundle: hero
 mode: default
 content:
-  field_hero:
-    type: entity_reference_paragraphs
-    weight: 26
+  field_background:
+    type: media_library_widget
+    weight: 2
+    region: content
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
+      media_types: {  }
     third_party_settings: {  }
+  field_color_theme:
+    type: styles
+    weight: 6
     region: content
-  info:
-    type: string_textfield
-    weight: -5
+    settings: {  }
+    third_party_settings: {  }
+  field_cta:
+    type: styles_link_target
+    weight: 4
     region: content
     settings:
-      size: 60
+      placeholder_url: ''
+      placeholder_title: ''
+      style: ''
+      target_blank: 0
+    third_party_settings: {  }
+  field_overlay:
+    type: boolean_checkbox
+    weight: 3
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  field_text:
+    type: text_textarea
+    weight: 1
+    region: content
+    settings:
+      rows: 5
       placeholder: ''
+    third_party_settings: {  }
+  field_text_position:
+    type: styles
+    weight: 5
+    region: content
+    settings: {  }
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 0
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  info: true
