--- a/config/sync/core.entity_view_display.block_content.hero.default.yml
+++ b/config/sync/core.entity_view_display.block_content.hero.default.yml
@@ -4,24 +4,71 @@ status: true
 dependencies:
   config:
     - block_content.type.hero
-    - field.field.block_content.hero.field_hero
+    - field.field.block_content.hero.field_background
+    - field.field.block_content.hero.field_color_theme
+    - field.field.block_content.hero.field_cta
+    - field.field.block_content.hero.field_overlay
+    - field.field.block_content.hero.field_text
+    - field.field.block_content.hero.field_text_position
   module:
-    - entity_reference_revisions
-_core:
-  default_config_hash: 9tV1WJOQt-XOFwFpAklUbjjfp9PmCmb4PT-G4qovFjc
+    - styles
+    - text
 id: block_content.hero.default
 targetEntityType: block_content
 bundle: hero
 mode: default
 content:
-  field_hero:
-    type: entity_reference_revisions_entity_view
-    weight: 0
+  field_background:
+    type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: default
-      link: ''
+      view_mode: hero
+      link: false
     third_party_settings: {  }
+    weight: 0
+    region: content
+  field_color_theme:
+    type: styles_class
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 4
+    region: content
+  field_cta:
+    type: styles_link_target
+    label: hidden
+    settings:
+      trim_length: '80'
+      url_only: ''
+      url_plain: ''
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    weight: 3
+    region: content
+  field_overlay:
+    type: boolean
+    label: hidden
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 5
+    region: content
+  field_text:
+    type: text_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
+    region: content
+  field_text_position:
+    type: styles_class
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
   langcode: true
