--- a/config/sync/core.entity_view_display.node.page.full.yml
+++ b/config/sync/core.entity_view_display.node.page.full.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.hero
     - core.entity_view_mode.node.full
     - field.field.node.page.body
     - field.field.node.page.field_description
@@ -32,22 +31,7 @@ third_party_settings:
           column_spacing_bottom: section--spacing-bottom-none
           hide_breadcrumbs: false
           column_width: section--width-full
-        components:
-          67e33676-996e-47c7-a397-fe1f3ba89570:
-            uuid: 67e33676-996e-47c7-a397-fe1f3ba89570
-            region: content
-            configuration:
-              id: 'inline_block:hero'
-              label: 'Inline block'
-              label_display: ''
-              provider: layout_builder
-              context_mapping: {  }
-              view_mode: full
-              block_id: 5
-              block_revision_id: 5
-              block_serialized: null
-            weight: 0
-            additional: {  }
+        components: {  }
         third_party_settings: {  }
   layout_builder_restrictions:
     allowed_block_categories:
