Updates to Video block

--- a/config/sync/core.entity_form_display.media.video.default.yml
+++ b/config/sync/core.entity_form_display.media.video.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.media.video.field_media_category
     - field.field.media.video.field_media_video_file
+    - field.field.media.video.field_video_caption_file
     - media.type.video
   module:
     - file
@@ -18,56 +19,63 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   field_media_category:
-    weight: 1
+    type: entity_reference_autocomplete_tags
+    weight: 2
+    region: content
     settings:
       match_operator: CONTAINS
       match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_autocomplete_tags
-    region: content
   field_media_video_file:
-    weight: 0
+    type: file_generic
+    weight: 1
+    region: content
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
+  field_video_caption_file:
     type: file_generic
+    weight: 3
     region: content
+    settings:
+      progress_indicator: throbber
+    third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 0
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
+    weight: 7
+    region: content
     settings:
       display_label: true
-    weight: 6
-    region: content
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 4
+    region: content
     settings:
       match_operator: CONTAINS
       match_limit: 10
       size: 60
       placeholder: ''
-    region: content
     third_party_settings: {  }
 hidden:
   name: true
