--- a/config/sync/core.entity_form_display.block_content.hero.default.yml
+++ b/config/sync/core.entity_form_display.block_content.hero.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.block_content.hero.field_overlay
     - field.field.block_content.hero.field_text
     - field.field.block_content.hero.field_text_position
+    - field.field.block_content.hero.field_title
   module:
     - media_library
     - styles
@@ -21,20 +22,20 @@ mode: default
 content:
   field_background:
     type: media_library_widget
-    weight: 2
+    weight: 3
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_color_theme:
     type: styles
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   field_cta:
     type: styles_link_target
-    weight: 4
+    weight: 5
     region: content
     settings:
       placeholder_url: ''
@@ -44,14 +45,14 @@ content:
     third_party_settings: {  }
   field_overlay:
     type: boolean_checkbox
-    weight: 3
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_text:
     type: text_textarea
-    weight: 1
+    weight: 2
     region: content
     settings:
       rows: 5
@@ -59,9 +60,17 @@ content:
     third_party_settings: {  }
   field_text_position:
     type: styles
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_title:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   langcode:
     type: language_select
