--- a/config/sync/core.entity_form_display.block_content.video.default.yml
+++ b/config/sync/core.entity_form_display.block_content.video.default.yml
@@ -4,10 +4,9 @@ status: true
 dependencies:
   config:
     - block_content.type.video
-    - field.field.block_content.video.field_video_headline
+    - field.field.block_content.video.field_show_video_captions
+    - field.field.block_content.video.field_show_video_transcript
     - field.field.block_content.video.field_video_media
-    - field.field.block_content.video.field_video_subline
-    - field.field.block_content.video.field_video_text_color
   module:
     - media_library
 _core:
@@ -17,35 +16,27 @@ targetEntityType: block_content
 bundle: video
 mode: default
 content:
-  field_video_headline:
-    weight: 26
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+  field_show_video_captions:
+    type: boolean_checkbox
+    weight: 30
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  field_show_video_transcript:
+    type: boolean_checkbox
+    weight: 31
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_video_media:
     type: media_library_widget
     weight: 29
+    region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
-    region: content
-  field_video_subline:
-    weight: 27
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_video_text_color:
-    weight: 28
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   info:
     type: string_textfield
     weight: -5
