--- a/config/sync/core.entity_form_display.media.video.media_library.yml
+++ b/config/sync/core.entity_form_display.media.video.media_library.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_form_mode.media.media_library
     - field.field.media.video.field_media_category
     - field.field.media.video.field_media_video_file
+    - field.field.media.video.field_video_caption_file
     - media.type.video
 _core:
   default_config_hash: MR527eZ3Vq2DtIfN76a6iRJaKFpLvB1k0h0yo2G3CSQ
@@ -34,6 +35,7 @@ content:
 hidden:
   created: true
   field_media_video_file: true
+  field_video_caption_file: true
   name: true
   path: true
   status: true
