--- a/config/sync/core.entity_view_display.block_content.video.default.yml
+++ b/config/sync/core.entity_view_display.block_content.video.default.yml
@@ -4,12 +4,9 @@ status: true
 dependencies:
   config:
     - block_content.type.video
-    - field.field.block_content.video.field_video_headline
+    - field.field.block_content.video.field_show_video_captions
+    - field.field.block_content.video.field_show_video_transcript
     - field.field.block_content.video.field_video_media
-    - field.field.block_content.video.field_video_subline
-    - field.field.block_content.video.field_video_text_color
-  module:
-    - options
 _core:
   default_config_hash: 8jMOIJJl0OQGgBaOqurYXhxnlBFnO2HOrqMjb4W8Ers
 id: block_content.video.default
@@ -17,37 +14,34 @@ targetEntityType: block_content
 bundle: video
 mode: default
 content:
-  field_video_headline:
-    weight: 0
-    label: hidden
+  field_show_video_captions:
+    type: boolean
+    label: above
     settings:
-      link_to_entity: false
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: string
+    weight: 4
+    region: content
+  field_show_video_transcript:
+    type: boolean
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 5
     region: content
   field_video_media:
     type: entity_reference_entity_view
-    weight: 3
     label: hidden
     settings:
       view_mode: default
       link: false
     third_party_settings: {  }
-    region: content
-  field_video_subline:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_video_text_color:
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
+    weight: 3
     region: content
 hidden:
   langcode: true
