--- a/config/sync/core.entity_view_display.media.video.default.yml
+++ b/config/sync/core.entity_view_display.media.video.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.media.video.field_media_category
     - field.field.media.video.field_media_video_file
+    - field.field.media.video.field_video_caption_file
     - media.type.video
   module:
     - file
@@ -17,18 +18,26 @@ mode: default
 content:
   field_media_video_file:
     type: file_video
-    weight: 0
     label: visually_hidden
     settings:
-      muted: false
-      width: 640
-      height: 480
       controls: true
       autoplay: false
       loop: false
       multiple_file_display_type: tags
+      muted: false
       playsinline: false
+      width: 640
+      height: 480
     third_party_settings: {  }
+    weight: 0
+    region: content
+  field_video_caption_file:
+    type: file_default
+    label: above
+    settings:
+      use_description_as_link_text: true
+    third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
   created: true
