--- a/config/sync/core.entity_view_display.media.video.media_library.yml
+++ b/config/sync/core.entity_view_display.media.video.media_library.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.media.media_library
     - field.field.media.video.field_media_category
     - field.field.media.video.field_media_video_file
+    - field.field.media.video.field_video_caption_file
     - image.style.thumbnail
     - media.type.video
   module:
@@ -19,17 +20,18 @@ mode: media_library
 content:
   thumbnail:
     type: image
-    weight: 0
-    region: content
     label: hidden
     settings:
-      image_style: thumbnail
       image_link: ''
+      image_style: thumbnail
     third_party_settings: {  }
+    weight: 0
+    region: content
 hidden:
   created: true
   field_media_category: true
   field_media_video_file: true
+  field_video_caption_file: true
   langcode: true
   name: true
   search_api_excerpt: true
