--- a/config/sync/field.field.block_content.hero.field_color_theme.yml
+++ b/config/sync/field.field.block_content.hero.field_color_theme.yml
@@ -13,7 +13,7 @@ entity_type: block_content
 bundle: hero
 label: 'Color theme'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
