--- a/config/sync/field.storage.block_content.field_title.yml
+++ b/config/sync/field.storage.block_content.field_title.yml
@@ -1,19 +1,17 @@
-uuid: 28c33509-ca47-47ce-ae68-f502bf2fea01
+uuid: 7f4b613b-74d8-4180-b055-d57aaa9d6542
 langcode: en
 status: true
 dependencies:
   module:
     - block_content
-_core:
-  default_config_hash: 0hwEVp_GAecjUP0KtCExhuecMvaZ2boF56BCn7INCJ4
-id: block_content.field_video_headline
-field_name: field_video_headline
+id: block_content.field_title
+field_name: field_title
 entity_type: block_content
 type: string
 settings:
   max_length: 255
-  is_ascii: false
   case_sensitive: false
+  is_ascii: false
 module: core
 locked: false
 cardinality: 1
